--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <section id="viagem">
+            <h2>Sua próxima viagem</h2>
+            <h1>Conheça Busan</h1>
+            <img src="" alt="">
+            <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua.
+                <br><span>Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</span>   
+            </p>
+        </section>
+        <section id="história">
+            <h2>para os amantes de história</h2>
+            <h1>Descubra 3 destinos incríveis em Busan</h1>
+            <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
+                Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
+            </p>
+        </section>
+        <section id="haedong">
+            <img src="" alt="">
+            <h1>1. Templo Haedong Yonggunsa</h1>
+    
+            <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
+            </p>
+            <h3>Bom para:</h3>
+            <ul>
+                <li>História</li>
+            </ul>
+        </section>
+        <section id="beomeo">
+            <img src="" alt="">
+            <h1>2. Templo Beomeo-sa</h1>
+            <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
+            </p>
+            <h3>Bom para:</h3>
+            <ul>
+                <li>História</li>
+            </ul>
+        </section>
+        <section id="yongdusan">
+            <img src="" alt="">
+            <h1>3. Parque Yongdusan</h1>
+            <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
+            </p>
+            <ul>
+                <li>Casais</li>
+                <li>Famílias</li>
+                <li>Orçamento</li>
+            </ul>
+        </section>
+
+    </main>
     
 </body>
 </html>
