--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section id="viagem">
             <h2>Sua próxima viagem</h2>
             <h1>Conheça Busan</h1>
-            <img src="" alt="">
+            <img src="./assets/busan.png" alt="Cidade de busan, mostrando os prédios muito iluminados ao lado de um porto, com vários barcos e uma ponte vermelha">
             <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua.
                 <br><span>Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</span>   
             </p>
@@ -24,7 +24,7 @@
             </p>
         </section>
         <section id="haedong">
-            <img src="" alt="">
+            <img src="./assets/haedong.png" alt="Um templo chinês, localizado em um terreno montanhoso que se encontra com o mar">
             <h1>1. Templo Haedong Yonggunsa</h1>
     
             <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
@@ -35,7 +35,7 @@
             </ul>
         </section>
         <section id="beomeo">
-            <img src="" alt="">
+            <img src="./assets/beomeo.png" alt="Templo chinês nas montanhas">
             <h1>2. Templo Beomeo-sa</h1>
             <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
             </p>
@@ -45,7 +45,7 @@
             </ul>
         </section>
         <section id="yongdusan">
-            <img src="" alt="">
+            <img src="./assets/yongdusan.png" alt="Parque muito arborizado e calmo">
             <h1>3. Parque Yongdusan</h1>
             <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
             </p>
