--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <title>Guia de viagem</title>
 </head>
 <body>
     <main>
         <div id="container">
             <section id="viagem">
-                <h2>Sua próxima viagem</h2>
+                <p class="headline">Sua próxima viagem</p>
                 <h1>Conheça Busan</h1>
                 <img src="./assets/busan.png" alt="Cidade de busan, mostrando os prédios muito iluminados ao lado de um porto, com vários barcos e uma ponte vermelha">
-                <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua.
+                <p id="subtitle">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua.
                     <br><span>Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</span>   
                 </p>
             </section>
             <section id="história">
-                <h2>para os amantes de história</h2>
+                <p class="headline">Para os amantes de história</p>
                 <h1>Descubra 3 destinos incríveis em Busan</h1>
                 <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
                     Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
