--- a/index.html
+++ b/index.html
@@ -13,52 +13,63 @@
     <main>
         <div id="container">
             <section id="viagem">
-                <p class="headline">Sua próxima viagem</p>
+                <p class="headline">Sua próxima viagem:</p>
                 <h1>Conheça Busan</h1>
                 <img src="./assets/busan.png" alt="Cidade de busan, mostrando os prédios muito iluminados ao lado de um porto, com vários barcos e uma ponte vermelha">
                 <p id="subtitle">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua.
                     <br><span>Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</span>   
                 </p>
             </section>
-            <section id="história">
+            <div class="divider"></div>
+            <section id="historia">
                 <p class="headline">Para os amantes de história</p>
-                <h1>Descubra 3 destinos incríveis em Busan</h1>
+                <h2>Descubra 3 destinos incríveis em Busan</h2>
                 <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
-                    Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
+                   <br> Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
                 </p>
             </section>
             <section id="haedong">
                 <img class="banner" src="./assets/haedong.png" alt="Um templo chinês, localizado em um terreno montanhoso que se encontra com o mar">
-                <h1>1. Templo Haedong Yonggunsa</h1>
-        
+                <h3>1. Templo Haedong Yonggunsa</h3>
                 <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
                 </p>
-                <h3>Bom para:</h3>
-                <ul>
-                    <li>História</li>
-                </ul>
+                <p class="bold">Bom para:</p>
+                <div class="list">
+                    <ul>
+                        <li class="blue">História</li>
+                    </ul>
+                </div>
             </section>
             <section id="beomeo">
                 <img class="banner" src="./assets/beomeo.png" alt="Templo chinês nas montanhas">
-                <h1>2. Templo Beomeo-sa</h1>
+                <h3>2. Templo Beomeo-sa</h3>
                 <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
                 </p>
-                <h3>Bom para:</h3>
-                <ul>
-                    <li>História</li>
-                </ul>
+                <p class="bold">Bom para:</p>
+                <div class="list">
+                    <ul>
+                        <li class="blue">História</li>
+                    </ul>
+                </div>
             </section>
             <section id="yongdusan">
                 <img class="banner" src="./assets/yongdusan.png" alt="Parque muito arborizado e calmo">
-                <h1>3. Parque Yongdusan</h1>
+                <h3>3. Parque Yongdusan</h3>
                 <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
                 </p>
-                <ul>
-                    <li>Casais</li>
-                    <li>Famílias</li>
-                    <li>Orçamento</li>
-                </ul>
+                <p class="bold">Bom para:</p>
+                <div class="list>">
+                    <ul>
+                        <li class="purple">Casais</li>
+                        <li class="pink">Famílias</li>
+                        <li class="orange">Orçamento</li>
+                    </ul>
+                </div>
             </section>
+            <div class="divider"></div>
+            <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público
+                <br><span>cosmopolita o ano todo.</span> </p>
+            <footer>feito com <img src="./assets/Vector.png"> pela Rocketseat</footer>
         </div>
 
     </main>
